# nusa-kernel

./: .clang-format  .gitignore  build.sh  engine.mk  env.sh  makefile  runqemu.txt  setup.sh
app/: app.c
app/include/: app.h
app/inetsrv/: inetsrv.c
app/rust_hello/: Cargo.toml
app/shell/: shell.c
app/stringtests/: string_tests.c
app/tests/: benchmarks.c  cache_tests.c  clock_tests.c  fibo.c  float.c  float_instructions.S  mem_tests.c  port_tests.c  tests.c  tests.h  thread_tests.c
arch/arm64/: arch.c  arm64_priv.h  asm.S  cache-ops.S  exceptions.S  exceptions_c.c  fpu.c  mmu.c  mp.c  spinlock.S  start.S  thread.c
arch/include/: arch.h
arch/riscv/: arch.c  asm.S  exceptions.c  feature.c  fpu_asm.S  linker-onesegment.ld  linker-twosegment.ld  mmu.cpp  mp.c  riscv_priv.h  sbi.c  start.S  time.c  (+1 more)
dev/: driver.c
kernel/: debug.c  event.c  init.c  mp.c  mutex.c  port.c  semaphore.c  thread.c  timer.c
make/: help.mk
platform/: debug.c  init.c  power.c  time.c
project/: pc-x86-test.mk
rust/dev-pl011/: Cargo.toml
rust/dev-pl011/src/: lib.rs
rust/nusa-sys/: Cargo.toml  build.rs  wrapper.h
rust/nusa-sys/src/: lib.rs
scripts/: do-bananapi-f3  do-dartuinoP0-test  do-or1ksim  do-qemuarm  do-qemum4  do-qemum68k  do-qemumicroblaze  do-qemumips  do-qemuriscv  do-qemux86  do-sifive-e  do-stellaris-launchpad-test  do-stm32f4-disco-test  do-stm32f7-disco-test  fetch-toolchains.py  nusa.cmm  run-qemu-boot-tests.py  unittest.py  xmd.tcl
tools/: .gitignore  Makefile  libnusaboot.c  libnusaboot.h  mkimage.c  nusaboot.c
top/: debug.c  init.c  main.c  mp.c
(+391 files in other folders)
